--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,10 +24,19 @@ a:hover {
   color: #535bf2;
 }
 
+.main {
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  align-items: center;
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
@@ -45,10 +54,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
